--- a/.gitconfig
+++ b/.gitconfig
@@ -8,8 +8,8 @@
   lg = log --graph --format=format:'%Cred%h%Creset %C(yellow)%an%d%Creset %s %Cgreen(%cr)%Creset'
   lg2 = log --graph --all --format=format:'%C(bold yellow)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %an%C(reset)' --abbrev-commit
 [user]
-  name = Madhusudhan Srinivasa
-  email = madhums8@gmail.com
+  name = Nar Kumar
+  email = neokya@gmail.com
 [color]
   branch = auto
   diff = auto
@@ -28,7 +28,6 @@
   changed = green
   untracked = cyan
 [github]
-  user = madhums
-  token = 1a9c96d572c2ee246c07ea7f260604fe
+  user = neokya
 [core]
   excludesfile = ~/.git-global-ignore
